# Snake

./: .gitignore  CMakeLists.txt
include/: Apple.hpp  Directions.hpp  Grid.hpp  Snake.hpp  SnakeSegment.hpp  variables.hpp
src/: Apple.cpp  Grid.cpp  Snake.cpp  SnakeSegment.cpp  main.cpp
